SPRDT-389: Fixed unit and IT tests